# course-project-drxam

./: .dockerignore  .env.example  .gitignore  BRANCH_PROTECTION_SETUP.md  Dockerfile  ISSUE_TEMPLATE.md  Makefile  P02_COMPLETION_REPORT.md  PR_DESCRIPTION.md  PR_P03_DESCRIPTION.md  README.md  REVIEW_COMMENTS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci-p11-dast.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/P09/: sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json  zap_summary.md
app/: database.py  dependencies.py  main.py  models.py
app/api/v1/: auth.py  items.py
app/security/: auth.py  file_validation.py  input_validation.py  problems.py  secrets.py
docs/adr/: ADR-001-rfc7807-error-format.md  ADR-002-file-validation-security.md  ADR-003-secrets-management.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  STRIDE.md
policy/: waivers.yml
scripts/: run.sh  test_container.sh
security/: .gitleaks.toml
security/semgrep/: rules.yml
tests/: test_errors.py  test_file_upload.py  test_mvp.py  test_rfc7807.py  test_secrets.py  test_secure_coding.py
